-issue#1293: Correctly identify if command 'snmpbulkwalk' is available
-issue#1296: CactiErrorHandler now ignores suppressed errors
-issue#1300: Automation discovery : New devices added by automation discovery have empty SNMP community field
-issue#1302: Dont redirect unathenticated users to the automatic logout page
-issue: When a checkbox table has no rows, the checkbox is resizable
-feature: CLog now has links and names for Poller, Data Query and Data Sources
-feature: CLog now displays datasource link next to RRD files which is useful for missing RRD's
-feature: CLog now uses a more dynamic functionality to query regex to allow plugin addition in future
-feature: CLog now lists filenames in reverse order to be more intuitive

1.1.33
-issue#1253: Automatically generated RRDtool DEF names in Cacti 1.1.32 break existing Graph Templates

1.1.32
-issue#969: Undefined index: color_id / task_item when viewing graphs
-issue#1166: Fix typo of 'locale' in global_languages.php
-issue#1222: Graphs with large number of items causes RRDTool to error
-issue#1230: PHP Fatal error: Call to undefined function get_max_tree_sequence()
-issue#1238: SNMP functions fail to handle "Invalid object identifier" error
-issue#1239: Browser console error in layout.js
-issue#1240: Page layout issues caused by library update
-issue#1246: Make SNMP Error return more info
-issue: Missing or corrupted theme files can corrupt user settings
-issue: Theme may not change until next login
-issue: Tree edit Tree/Device/Graph drag areas incorrect
-issue: Make callback error handling compatible with jQuery 3.x
-issue: Ensure the snmp_error is cleared before every call
-issue: Indicate unknown error when RRDTool returns no error message
-feature: Update Javascript library: js.storage.js, d3.js, jquery.js, jquery.tablednd.js, jquery.timepicker.js

1.1.31
-issue#629: Site reload after delete the last letter in the searchbar
-issue#1022: Discovery network stuck in "running" state does not return results